Correciones lineamientos
