# models/actividad_grupo_cultural.go
@@ -5,14 +5,18 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
+	"time"
 
 	"github.com/astaxie/beego/orm"
 )
 
 type ActividadGrupoCultural struct {
-	Id                  int                `orm:"column(id_actividad_grupo_cultural);pk;auto"`
-	IdGrupoCultural     *GrupoCultural     `orm:"column(id_grupo_cultural);rel(fk)"`
-	IdActividadCultural *ActividadCultural `orm:"column(id_actividad_cultural);rel(fk)"`
+	Id                  int                `orm:"column(id);pk;auto"`
+	IdGrupoCultural     *GrupoCultural     `orm:"column(grupo_cultural_id);rel(fk)"`
+	IdActividadCultural *ActividadCultural `orm:"column(actividad_cultural_id);rel(fk)"`
+	activo              bool               `orm:"column(activo)"`
+	FechaCreacion       time.Time          `orm:"column(fecha_creacion);type(timestamp without time zone)"`
+	FechaModificacion   time.Time          `orm:"column(fecha_modificacion);type(timestamp without time zone)"`
 }
 
 func (t *ActividadGrupoCultural) TableName() string {
